--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
   </head>
   <body>
   <header>
+      <div class="grid">
+        <div class="col-11-12">
+          <nav class="nav-header">
+              <a href="#">ABOUT</a>
+              <a href="#">FAVORITES</a>
+              <a href="#">CONTACT</a>
+          </nav>
+        </div>
+      </div>
+  </header>
+
+  <section class="content">
     <div class="grid">
      <div class="col-1-1">
-       <div class="content">
-           <p>lalaal</p>
+       <div class="logo">
+        <img class="michi" src="images/logo.png">
+        <h2 id="letras">KIRI</h2>
+        <h2 id="letras">cats rock my socks off </h2>
        </div>
     </div>
    </div>
- </div>
- </header>
+ </section>
+
   </body>
 </html>
