--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <div class="col-1-1">
        <div class="logo">
         <img class="michi" src="images/logo.png">
-        <h2 id="letras">KIRI</h2>
+        <h2 id="kiri">KIRI</h2>
         <h2 id="letras">cats rock my socks off </h2>
        </div>
     </div>
