--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
   </header>
-
+<!--!first section-->
   <section class="content">
     <div class="grid">
      <div class="col-1-1">
@@ -33,6 +33,66 @@
     </div>
    </div>
  </section>
+  <section class="tile">
+    <div class="grid">
+     <div class="col-10-12">
+       <div class="profile">
+        <img class="foto" src="images/profile.jpg">
+        <h3 id="about">about me</h3>
+        <p id="letras">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias est maiores quo tempora illum quibusdam, incidunt aspernatur, voluptatem maxime, nihil corporis quis beatae neque, esse. Laborum maxime blanditiis quasi voluptate? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae culpa voluptas quod tempora animi ipsam fugit voluptates reiciendis ratione. Dolorem at commodi labore, maxime deserunt libero! Fuga in dignissimos vitae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam praesentium nisi fuga at ratione quibusdam beatae tenetur neque sint, ab, eligendi ipsa in assumenda tempore repellat eos vitae esse suscipit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, repellendus voluptatibus quia distinctio, pariatur natus commodi officiis quo, velit at placeat consequatur.</p>
+       </div>
+    </div>
+   </div>
+<section>
+  <div class="grid">
+   <div class="col-1-1"> 
+       <h3 id="about">my favourite things</h3>
+       <h6 id="about"> here are a few things I really love</h6>
+   </div>
 
+     <div class="col-1-4">
+       <div class="gato">
+        <img class="kitten" src="images/kitten.jpg">
+       </div>
+    </div>
+    <div class="col-1-4">
+       <div class="gato">
+        <img class="kitten" src="images/kitten.jpg">
+       </div>
+    </div>
+    <div class="col-1-4">
+       <div class="gato">
+        <img class="kitten" src="images/kitten.jpg">
+       </div>
+    </div>
+    <div class="col-1-4">
+       <div class="gato">
+        <img class="kitten" src="images/kitten.jpg">
+       </div>
+    </div>
+   </div>
+</section>
+<footer class="tile2">
+  <div class="grid">
+  <div class="col-1-1"> 
+       <h3 id="about">Contact me</h3>
+   </div>
+     <div class="col-1-3">
+       <div class="redes">
+        <img id="redes" src="images/twitter.png">
+       </div>
+    </div>
+     <div class="col-1-3">
+       <div class="redes">
+        <img id="redes" src="images/linkedin.png">
+       </div>
+    </div>
+     <div class="col-1-3">
+       <div class="redes">
+        <img id="redes" src="images/facebook.png">
+       </div>
+    </div>
+   </div>
+</footer>
   </body>
 </html>
