--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
   <header>
       <div class="grid">
-        <div class="col-11-12">
+        <div class="col-10-12">
           <nav class="nav-header">
               <a href="#">ABOUT</a>
               <a href="#">FAVORITES</a>
@@ -39,7 +39,7 @@
        <div class="profile">
         <img class="foto" src="images/profile.jpg">
         <h3 id="about">about me</h3>
-        <p id="letras">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias est maiores quo tempora illum quibusdam, incidunt aspernatur, voluptatem maxime, nihil corporis quis beatae neque, esse. Laborum maxime blanditiis quasi voluptate? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae culpa voluptas quod tempora animi ipsam fugit voluptates reiciendis ratione. Dolorem at commodi labore, maxime deserunt libero! Fuga in dignissimos vitae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam praesentium nisi fuga at ratione quibusdam beatae tenetur neque sint, ab, eligendi ipsa in assumenda tempore repellat eos vitae esse suscipit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, repellendus voluptatibus quia distinctio, pariatur natus commodi officiis quo, velit at placeat consequatur.</p>
+        <p id="letras">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias est maiores quo tempora illum quibusdam, incidunt aspernatur, voluptatem maxime, nihil corporis quis beatae neque, esse. Laborum maxime blanditiis quasi voluptate? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae culpa voluptas quod tempora animi ipsam fugit voluptates reiciendis ratione. Dolorem at commodi labore, maxime deserunt libero! Fuga in dignissimos vitae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam praesentium nisi fuga at ratione quibusdam beatae tenetur neque sint, ab, eligendi ipsa in assumenda tempore repellat eos vitae esse suscipit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, repellendus voluptatibus quia distinctio.</p>
        </div>
     </div>
    </div>
