--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Oswald'>
+    <link type='text/css' rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oswald'>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico">
